Improve properties fetching

In case it's a directory property and the directory is not specified,
use the cmake_current_source_dir value as the directory.

BUG: 306600